Remember settings in "Clear Personal Data"
Submitted by Boris Hollas
Link to original bug (#770755)
Description
By default, "cache and temporary files" is selected in the "Clear Personal Data" dialog. If I select other items, these settings will not be remembered. They should be remembered so the user doesn't have to re-enter his preferred settings each time.
Also, when typing in the location bar, history entries show up so that smart bookmarks are less easy to find. As this can be improved by clearing the history, a keyboard shortcut should be provided to clear personal data or the docs should explain how this can be accomplished with Gnome. If possible, the same shortcut as for FF should be used (Shift-Ctrl-Del).
Version: 3.18.x (obsolete)