Remember settings in "Clear Personal Data"

Keep track of user changes and offer the same settings on the next run.

Fixes: https://gitlab.gnome.org/GNOME/epiphany/-/issues/328